--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -6,9 +6,8 @@
     <meta charset="UTF-8"/> 
     <meta name="author" content="DESDEVISES Simon, MARIE Enzo"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <meta name="keywords" content="rechargle, wordle, play"/>
+    <meta name="keywords" content="rechargle, wordle, play, recharge, celebrity"/>
     <meta name="description" content="Search from a daily available image a celebrity before the battery of the virtual phone is completely discharged. The number of tries is therefore randomly limited."/>
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Rechargle</title>
 
     <style>
