--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -15,6 +15,7 @@
     <meta name="description" content="Search from a daily available image a celebrity before the battery of the virtual phone is completely discharged. The number of tries is therefore randomly limited."/>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2719238446617123"
      crossorigin="anonymous"></script>
+     <script async custom-element="amp-ad" src="https://cdn.ampproject.org/v0/amp-ad-0.1.js"></script>
     <title>Rechargle</title>
 
     <style>
